correct spacing

--- a/src/login/styles/login.scss
+++ b/src/login/styles/login.scss
@@ -18,7 +18,7 @@
   @include forSize('phoneDown') {
     display: block;
     .paragraph {
-      margin-top: 1rem;
+      margin-top: 1.5rem;
     }
   }
 }
